# libeither

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs  rustfmt.toml
.cargo/: config
.github/workflows/: main.yml
scripts/: run-tests.sh
src/: either.rs  error.rs  lib.rs
