[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "Either struct for Rust"
documentation = "https://docs.rs/libeither"
edition = "2018"
homepage = "https://github.com/rustyhorde/libeither"
keywords = ["either", "struct"]
license = "MIT/Apache-2.0"
name = "libeither"
readme = "README.md"
repository = "https://github.com/rustyhorde/libeither"
version = "0.3.0"

[package.metadata.docs.rs]
features = ["serde", "unstable"]

[dependencies]
failure = "0"
serde = { version = "1", optional = true, features = ["derive"] }

[features]
default = ["serde"]
unstable = []

[dev-dependencies]
toml = "0"
serde_json = "1"
