[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "Either struct for Rust"
documentation = "https://docs.rs/libeither"
edition = "2018"
homepage = "https://github.com/rustyhorde/libeither"
keywords = ["either", "struct"]
license = "MIT/Apache-2.0"
name = "libeither"
readme = "README.md"
repository = "https://github.com/rustyhorde/libeither"
version = "0.4.0"

[package.metadata.docs.rs]
features = ["serde", "serde_derive"]

[dependencies]
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }

[features]
serialization = ["serde", "serde_derive"]
unstable = []
default = ["serialization"]

[dev-dependencies]
toml = "0"
serde_json = "1"
