[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "Either struct for Rust"
documentation = "https://docs.rs/libeither"
edition = "2021"
homepage = "https://github.com/rustyhorde/libeither"
keywords = ["either", "struct"]
license = "MIT/Apache-2.0"
name = "libeither"
readme = "README.md"
repository = "https://github.com/rustyhorde/libeither"
version = "0.5.0"

[package.metadata.docs.rs]
features = ["serde"]

[dependencies]
serde = { version = "1.0.149", optional = true, features = ["derive"] }

[features]
serialization = ["serde"]
unstable = []
default = ["serialization"]

[dev-dependencies]
toml = "0.7.1"
serde_json = "1.0.89"

[build-dependencies]
rustversion = "1.0.9"
